--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "doctor-appointment",
+  "name": "medimitra",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.25.4",
     "@clerk/themes": "^2.2.43",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.13",
